--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,9 @@
 
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: #f0f0f0;
 }
 
@@ -19,6 +16,7 @@ body {
   max-width: 800px;
   width: 100%;
   padding: 20px;
+  margin: 30px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -28,14 +26,32 @@ header {
   text-align: center;
 }
 
-.profile {
+.about-me {
+  max-width: 500px;
+  text-align: justify;
+  line-height: 1.5;
+}
+
+.profile,
+.about-me,
+.useful-links {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.useful-links,
+.social-media {
+  margin: 20px 0;
+}
+
+.useful-links h2,
+.social-media h2 {
+  margin: 10px 0;
+}
+
 .profile * {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .date-time {
@@ -58,5 +74,20 @@ ul li a {
 }
 
 ul li a:hover {
+  text-decoration: underline;
+}
+.social-media {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.social-media .icons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.social-media .icons a {
+  color: #007bff;
   text-decoration: underline;
 }
