--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0;
+  background: hsla(205, 46%, 10%, 1);
+  /* background-color: #f0f0f0; */
 }
 
 .container {
